
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.36.7]]
== 0.36.7 (TBD)

icon:plus[] REST: The webroot responses will now contain the header `Webroot-Node-Uuid` which identifies the node of the loaded content.

icon:plus[] REST: The authentication and element loading performance has been increased.

[[v0.36.6]]
== 0.36.6 (16.07.2019)

icon:plus[] REST: The performance of path resolving has been improved.

icon:plus[] Core: A new configuration section has been added. The `cache` options in the `mesh.yml` can now be used to control cache settings. The `cache.pathCacheSize` config setting and `MESH_CACHE_PATH_SIZE` environment variable can be used to control the path cache which will improve webroot and GraphQL path resolving performance.

icon:plus[] REST: The `webroot` endpoint will now set the `Cache-Control` header to `public` if the requested node can be read using the anonymous role. Otherwise the header will be set to `private`. This information is useful if you want to use a Caching Proxy in-between Gentics Mesh and your front-end application.

icon:check[] Core: Performance of loading nodes has been improved.

icon:check[] Core: Request logging now uses the link:https://vertx.io/docs/apidocs/io/vertx/ext/web/handler/LoggerFormat.html#SHORT[short format], which also shows how much time the the response took to complete.

icon:check[] Core: Improved performance when loading images with image manipulation.

[[v0.36.5]]
== 0.36.5 (10.07.2019)

icon:plus[] Upload: The `upload.parser` config setting and `MESH_BINARY_DOCUMENT_PARSER` environment variable can be used to control whether uploads should be parsed to extract metadata and contents. Uploads will be parsed by default.
