@@ -1,9 +1,11 @@
 package com.gentics.mesh.core.admin;
 
+import static com.gentics.mesh.MeshStatus.READY;
 import static com.gentics.mesh.test.ClientHelper.call;
 import static com.gentics.mesh.test.TestSize.FULL;
 import static com.gentics.mesh.test.context.ElasticsearchTestMode.NONE;
 import static io.netty.handler.codec.http.HttpResponseStatus.INTERNAL_SERVER_ERROR;
+import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.io.IOException;
@@ -27,7 +29,28 @@ public class AdminEndpointBackupFailLocalTest extends AbstractMeshTest {
 		org.apache.commons.io.FileUtils.deleteDirectory(new File(backupDir));
 		new File(backupDir).delete();
 		grantAdminRole();
+
+		// Override the current status
+		status(READY);
+		assertEquals(READY, status());
 		call(() -> client().invokeRestore(), INTERNAL_SERVER_ERROR, "error_backup", new File(backupDir).getAbsolutePath());
+		assertEquals(READY, status());
+	}
+
+	@Test
+	public void testBackupWithoutDir() throws IOException {
+		// Use an file as backup dir to provoke an error
+		File testFile = new File("target/test" + System.currentTimeMillis());
+		testContext.getOptions().getStorageOptions().setBackupDirectory(testFile.getAbsolutePath());
+		testFile.createNewFile();
+		testFile.deleteOnExit();
+		grantAdminRole();
+
+		// Override the current status
+		status(READY);
+		assertEquals(READY, status());
+		call(() -> client().invokeBackup(), INTERNAL_SERVER_ERROR, "backup_failed");
+		assertEquals(READY, status());
 	}
 
 }
